v3/api/keyfactor/v1/docs/CSSCMSDataModelModelsTemplatesTemplateEnrollmentField.md
# CSSCMSDataModelModelsTemplatesTemplateEnrollmentField

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**Id** | Pointer to **int32** |  | [optional] 
**Name** | Pointer to **NullableString** |  | [optional] 
**Options** | Pointer to **[]string** |  | [optional] 
**DataType** | Pointer to [**CSSCMSCoreEnumsTemplateEnrollmentFieldType**](CSSCMSCoreEnumsTemplateEnrollmentFieldType.md) |  | [optional] 

## Methods

### NewCSSCMSDataModelModelsTemplatesTemplateEnrollmentField

`func NewCSSCMSDataModelModelsTemplatesTemplateEnrollmentField() *CSSCMSDataModelModelsTemplatesTemplateEnrollmentField`

NewCSSCMSDataModelModelsTemplatesTemplateEnrollmentField instantiates a new CSSCMSDataModelModelsTemplatesTemplateEnrollmentField object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewCSSCMSDataModelModelsTemplatesTemplateEnrollmentFieldWithDefaults

`func NewCSSCMSDataModelModelsTemplatesTemplateEnrollmentFieldWithDefaults() *CSSCMSDataModelModelsTemplatesTemplateEnrollmentField`

NewCSSCMSDataModelModelsTemplatesTemplateEnrollmentFieldWithDefaults instantiates a new CSSCMSDataModelModelsTemplatesTemplateEnrollmentField object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetId

`func (o *CSSCMSDataModelModelsTemplatesTemplateEnrollmentField) GetId() int32`

GetId returns the Id field if non-nil, zero value otherwise.

### GetIdOk

`func (o *CSSCMSDataModelModelsTemplatesTemplateEnrollmentField) GetIdOk() (*int32, bool)`

GetIdOk returns a tuple with the Id field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetId

`func (o *CSSCMSDataModelModelsTemplatesTemplateEnrollmentField) SetId(v int32)`

SetId sets Id field to given value.

### HasId

`func (o *CSSCMSDataModelModelsTemplatesTemplateEnrollmentField) HasId() bool`

HasId returns a boolean if a field has been set.

### GetName

`func (o *CSSCMSDataModelModelsTemplatesTemplateEnrollmentField) GetName() string`

GetName returns the Name field if non-nil, zero value otherwise.

### GetNameOk

`func (o *CSSCMSDataModelModelsTemplatesTemplateEnrollmentField) GetNameOk() (*string, bool)`

GetNameOk returns a tuple with the Name field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetName

`func (o *CSSCMSDataModelModelsTemplatesTemplateEnrollmentField) SetName(v string)`

SetName sets Name field to given value.

### HasName

`func (o *CSSCMSDataModelModelsTemplatesTemplateEnrollmentField) HasName() bool`

HasName returns a boolean if a field has been set.

### SetNameNil

`func (o *CSSCMSDataModelModelsTemplatesTemplateEnrollmentField) SetNameNil(b bool)`

 SetNameNil sets the value for Name to be an explicit nil

### UnsetName
`func (o *CSSCMSDataModelModelsTemplatesTemplateEnrollmentField) UnsetName()`

UnsetName ensures that no value is present for Name, not even an explicit nil
### GetOptions

`func (o *CSSCMSDataModelModelsTemplatesTemplateEnrollmentField) GetOptions() []string`

GetOptions returns the Options field if non-nil, zero value otherwise.

### GetOptionsOk

`func (o *CSSCMSDataModelModelsTemplatesTemplateEnrollmentField) GetOptionsOk() (*[]string, bool)`

GetOptionsOk returns a tuple with the Options field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetOptions

`func (o *CSSCMSDataModelModelsTemplatesTemplateEnrollmentField) SetOptions(v []string)`

SetOptions sets Options field to given value.

### HasOptions

`func (o *CSSCMSDataModelModelsTemplatesTemplateEnrollmentField) HasOptions() bool`

HasOptions returns a boolean if a field has been set.

### SetOptionsNil

`func (o *CSSCMSDataModelModelsTemplatesTemplateEnrollmentField) SetOptionsNil(b bool)`

 SetOptionsNil sets the value for Options to be an explicit nil

### UnsetOptions
`func (o *CSSCMSDataModelModelsTemplatesTemplateEnrollmentField) UnsetOptions()`

UnsetOptions ensures that no value is present for Options, not even an explicit nil
### GetDataType

`func (o *CSSCMSDataModelModelsTemplatesTemplateEnrollmentField) GetDataType() CSSCMSCoreEnumsTemplateEnrollmentFieldType`

GetDataType returns the DataType field if non-nil, zero value otherwise.

### GetDataTypeOk

`func (o *CSSCMSDataModelModelsTemplatesTemplateEnrollmentField) GetDataTypeOk() (*CSSCMSCoreEnumsTemplateEnrollmentFieldType, bool)`

GetDataTypeOk returns a tuple with the DataType field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetDataType

`func (o *CSSCMSDataModelModelsTemplatesTemplateEnrollmentField) SetDataType(v CSSCMSCoreEnumsTemplateEnrollmentFieldType)`

SetDataType sets DataType field to given value.

### HasDataType

`func (o *CSSCMSDataModelModelsTemplatesTemplateEnrollmentField) HasDataType() bool`

HasDataType returns a boolean if a field has been set.


[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


